2005-12-31  Per Bothner  <per@bothner.com>

	* PreProcess.java: Fix various problems in handling nested
	conditionals.

2005-12-30  Per Bothner  <per@bothner.com>

	* PreProcess.java (filter): Implement nested conditionals.

2005-10-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java: Improve compatibility with java.util.Map.
	(clear, size): New methods.
	* HashNode.java: Implement java.util.Map.Entry, in the JAVA2 case.
	(setValue): Method returns old value.
	(equals, hashCode): New methods.

	* GeneralHashTable.java (getNode): New helper method, for srfi69.scm.
	(table, num_bindings): Make proctected, for access from srfi69.scm.
	(next): New protected static method, also for srfi69.scm.

2005-08-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java: New class.
	* HashNode.java: New class.
	* Makefile.am (java_sources): Add new classes.

2005-07-20  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add PreProcess.java.

2005-06-04  Per Bothner  <per@bothner.com>

	* AbstractFormat.java: Moved to gnu.lists.
	* Makefile.am: Update accordingly.

	* AbstractFormat.java: No longer implement FormatToConsumer.
	(writeObject): New abstract method.
	(format): Update variable saveFormat to match OutPort's objectFormat.

	* AbstractFormat.java: Change to extend java.text.Format
	rather than Procedure1or2.
	(apply1, apply2): Remove methods.
	(format(Object,StringBuffer,FieldPosition)): New method, for Format.
	(parseObject): New stub method.

	* AbstractFormat.java (writeLong, writeInt): New methods.

2005-01-29  Per Bothner  <per@bothner.com>

	* PreProcess.java (main): Predefine "true" and "false" keywords.

2005-01-08  Per Bothner  <per@bothner.com>

	* PreProcess.java (main): Also handle [-,--]keyword=[true|false].

2005-01-07  Per Bothner  <per@bothner.com>

	* PreProcess.java: New class, used by the select-javaN rules in
	top-level Makefile to convert Java source files.

2003-04-05  Per Bothner  <per@bothner.com>
