@@ -3,7 +3,6 @@
 include $(top_srcdir)/Make-rules
 
 java_sources = \
-  ConsumeProc.java \
   GeneralHashTable.java \
   HashNode.java \
   RangeTable.java
