@@ -1,3 +1,8 @@
+2006-09-08  Per Bothner  <per@bothner.com>
+
+	* ConsumeProc.java: Remove unused class.
+	* Makefile.ma: Update accordingly.
+
 2005-12-31  Per Bothner  <per@bothner.com>
 
 	* PreProcess.java: Fix various problems in handling nested
